--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,22 +1,31 @@
+---
+interface Props {
+	title: string;
+}
+
+const { title } = Astro.props;
+
+import "lism-css/all.css";
+import Header from "@components/Header.astro";
+import Footer from "@components/Footer.astro";
+import { Grid, Stack } from "lism-css/astro";
+---
+
 <!doctype html>
-<html lang="en">
+<html lang="ja">
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro Basics</title>
+		<title>{title}</title>
 	</head>
-	<body>
-		<slot />
-	</body>
-</html>
+	<Grid tag="body" gtr="auto 1fr auto" minH="100svh">
+		<Header />
+		<Stack>
+			<slot />
+		</Stack>
+		<Footer />
+	</Grid>
 
-<style>
-	html,
-	body {
-		margin: 0;
-		width: 100%;
-		height: 100%;
-	}
-</style>
+</html>
