--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,13 @@
 ---
-import Welcome from '../components/Welcome.astro';
-import Layout from '../layouts/Layout.astro';
-
-// Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
-// Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
+import Layout from "@layouts/Layout.astro";
+import { Center, Text } from "lism-css/astro";
 ---
 
-<Layout>
-	<Welcome />
+<Layout title="Astro with Lism CSS">
+	<Center my="auto">
+		<Text fz="3xl">Welcome to Astro with Lism CSS</Text>
+		<Text fz="m" c="text-2"
+			>This is a sample page using Astro and Lism CSS.</Text
+		>
+	</Center>
 </Layout>
