--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -9,6 +9,7 @@ import { Box, Container, Flex, Link, Lism, Stack, Text } from "lism-css/astro";
       <Flex tag="ul" jc="fe" g="10">
         <Box tag="li"><Link d="b" p="10" href="/">Home</Link></Box>
         <Box tag="li"><Link d="b" p="10" href="/about">About</Link></Box>
+        <Box tag="li"><Link d="b" p="10" href="/news">News</Link></Box>
         <Box tag="li"><Link d="b" p="10" href="/contact">Contact</Link></Box>
       </Flex>
     </Lism>
