--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -11,6 +11,7 @@ import { Box, Container, Flex, Grid, Link, Lism, Text } from "lism-css/astro";
       <Flex tag="ul" jc="fe" g="10">
         <Box tag="li"><Link href="/" d="b" p="20">Home</Link></Box>
         <Box tag="li"><Link href="/about" d="b" p="20">About</Link></Box>
+        <Box tag="li"><Link href="/news" d="b" p="20">News</Link></Box>
         <Box tag="li"><Link href="/contact" d="b" p="20">Contact</Link></Box>
       </Flex>
     </Lism>
