--- a/src/constants/index.astro
+++ b/src/constants/index.astro
@@ -2,10 +2,10 @@
 export const SITE_NAME = "LismAstro";
 export const SITE_DISCRIPTION = "This is sample site.";
 export const NEWS_LABEL_NAME = "ニュース";
-export const NEWS_BASE_PATH = "/sample/corporate/news";
+export const NEWS_BASE_PATH = "/news";
 export const NEWS_LIST_LIMIT = 5;
 export const RELATED_NEWS_LIST_LIMIT = 3;
-export const CATEGORY_BASE_PATH = "/sample/corporate/category";
+export const CATEGORY_BASE_PATH = "/category";
 export const DEFAULT_THUMBNAIL_URL = "https://picsum.photos/id/47/640/480";
 export const DEFAULT_AVATAR_URL = "https://picsum.photos/id/40/200/200";
 ---
