--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,13 @@
 ---
 import Layout from "@layouts/Layout.astro";
-import { Center, Text } from "lism-css/astro";
+import {
+	Center,
+	Container,
+	Grid,
+	GridItem,
+	LinkBox,
+	Text,
+} from "lism-css/astro";
 ---
 
 <Layout title="Astro with Lism CSS">
