--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -8,7 +8,7 @@ const { title } = Astro.props;
 import "lism-css/all.css";
 import Header from "@components/Header.astro";
 import Footer from "@components/Footer.astro";
-import { Grid, Stack } from "lism-css/astro";
+import { Container, Grid, Stack } from "lism-css/astro";
 ---
 
 <!doctype html>
