Add Pagination and Category pages
・ニュースの2ページ目以降に対応
・Pagination追加
・カテゴリーページをざっくり実装

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -2,8 +2,8 @@
 import { Box, Container, Flex, Grid, Link, Lism, Text } from "lism-css/astro";
 ---
 
-<Container tag="header" size="l" hasGutter>
-  <Grid gtc={["auto 1fr"]} ai="c" py="30">
+<Container tag="header" size="full" hasGutter>
+  <Grid gtc={["auto 1fr"]} ai="c" px={["0", "30"]} py="30">
     <Link href="/" class="c--header__logo" d="b" p="10" c="text-1">
       <Text tag="h1" fz="2xl" fw="normal" lts="xl">LismAstro</Text>
     </Link>
