--- a/src/constants/index.astro
+++ b/src/constants/index.astro
@@ -1,6 +1,6 @@
 ---
 export const SITE_NAME = "LismAstro";
-export const SITE_DISCRIPTION = "This is sample site.";
+export const SITE_DISCRIPTION = "Astro with Lism CSS";
 export const NEWS_LABEL_NAME = "ニュース";
 export const NEWS_BASE_PATH = "/news";
 export const NEWS_LIST_LIMIT = 5;
