update for lism-css v0.0.13
・lism-css v0.0.11 → v0.0.13へ
・仕様変更に合わせて要修正箇所を修正
・カテゴリーページ周りの仕様を調整
・トップページを少しデザイン変更

--- a/src/components/RelatedNews.astro
+++ b/src/components/RelatedNews.astro
@@ -21,7 +21,7 @@ import { Frame, Grid, LinkBox, Media, Stack, Text } from "lism-css/astro";
 ---
 
 <Stack g="40">
-  <Text fz="2xl" fw="bold" ta="c">最近の{categoryName}</Text>
+  <Text fz="xl" ta="c">最近の{categoryName}</Text>
   <Grid gtc={["1fr", null, "repeat(3, 1fr)"]} g="50">
     {
       relatedNews.map((content: any) => (
