--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -5,10 +5,10 @@ interface Props {
 
 const { title } = Astro.props;
 
-import "lism-css/all.css";
+import "lism-css/main.css";
 import Header from "@components/Header.astro";
 import Footer from "@components/Footer.astro";
-import { Container, Grid, Stack } from "lism-css/astro";
+import { Grid, Stack } from "lism-css/astro";
 ---
 
 <!doctype html>
