--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -5,7 +5,7 @@ import { Box, Container, Flex, Grid, Link, Lism, Text } from "lism-css/astro";
 <Container tag="header" size="full" hasGutter>
   <Grid gtc={["auto 1fr"]} ai="c" px={["0", "30"]} py="30">
     <Link href="/" class="c--header__logo" d="b" p="10" c="text-1">
-      <Text tag="h1" fz="2xl" fw="normal" lts="xl">LismAstro</Text>
+      <Text tag="h1" fz="2xl" fw="normal" lts="l">LismAstro</Text>
     </Link>
     <Lism tag="nav">
       <Flex tag="ul" jc="fe" g="10">
