add NavMenu component
・NavMenuコンポーネントを新規作成
・optinにButtonコンポーネントを追加

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -4,7 +4,7 @@ import { Box, Container, Flex, Link, Lism, Stack, Text } from "lism-css/astro";
 
 <Container tag="footer" size="l" hasGutter>
   <Stack ai="c" g="10" py="40">
-    <Text c="text-1" fz="xl" fw="normal" lts="l">LismAstro</Text>
+    <Text c="text-1" fz="xl" fw="normal" lts="l">LismStarter</Text>
     <Lism tag="nav">
       <Flex tag="ul" jc="fe" g="10">
         <Box tag="li"
