--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,14 +1,17 @@
 ---
+import Button from "@components/_optin/Button.astro";
+import NavMenu from "@components/NavMenu.astro";
 import { Box, Container, Flex, Grid, Link, Lism, Text } from "lism-css/astro";
 ---
 
 <Container tag="header" size="full" hasGutter>
   <Grid gtc={["auto 1fr"]} ai="c" px={["0", "30"]} py="30">
-    <Link href="/" class="c--header__logo" d="b" p="10" c="text-1">
-      <Text tag="h1" fz="2xl" fw="normal" lts="l">LismAstro</Text>
+    <Link href="/" class="c--header__logo" d="b" p="10 0" c="text-1" td="n">
+      <Text tag="h1" fz="2xl" fw="normal" lts="l">LismStarter</Text>
     </Link>
     <Lism tag="nav">
-      <Flex tag="ul" jc="fe" g="10">
+      <NavMenu />
+      <!-- <Flex tag="ul" jc="fe" g="10">
         <Box tag="li"
           ><Link href="/" d="b" p="30" c="text-1" td="n">Home</Link></Box
         >
@@ -22,13 +25,7 @@ import { Box, Container, Flex, Grid, Link, Lism, Text } from "lism-css/astro";
           ><Link href="/contact" d="b" p="30" c="text-1" td="n">Contact</Link
           ></Box
         >
-      </Flex>
+      </Flex> -->
     </Lism>
   </Grid>
 </Container>
-
-<style>
-  .c--header__logo {
-    text-decoration: none;
-  }
-</style>
